Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8779

Process Explorer leads to a crash in win32k.sys

    XMLWordPrintable

Details

    Description

      r65340
      http://www.oldapps.com/process_explorer.php?old_processexp=10?download
      Process Explorer 14.1 has regressed. It was working in rev 58146 as this report proofs ( https://jira.reactos.org/browse/CORE-6882 )

      Trying to start the app now leads to a win32k.sys crash.
      Debuglog attached

      Attachments

        1. debug.txt
          5 kB
        2. nt.patch
          2 kB
        3. processexplorer.log
          27 kB
        4. S_NI_api.PNG
          S_NI_api.PNG
          137 kB
        5. shell32.patch
          0.7 kB

        Issue Links

          Activity

            People

              jimtabor jimtabor
              vicmarcal vicmarcal
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: